# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
gendiff/: __init__.py  data_loader.py  formatters.py  gendiff.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_flat.py  test_gendiff_nested.py
tests/fixtures/: correct1.txt  correct2.txt  file1_flat.json  file2.yml
